Revert "fix only css for responsive on mobile"
This reverts commit 7b81483d46594cd4ef6b3d374b423cd9ebb3414f.

--- a/src/app/admin-box/admin-box.component.scss
+++ b/src/app/admin-box/admin-box.component.scss
@@ -1,6 +1,5 @@
 .box {
   min-height: calc(100vh - 110px);
-  position: relative;
 }
 .sidenav-content {
   display: flex;
@@ -27,30 +26,12 @@
   border-bottom: 1px solid black;
   padding: 10px;
 }
-.active {
+.active{
   background-color: #0d6efd;
   color: white;
 }
-.group-btn-mobile {
-  position: absolute;
-  top: -100px;
-  right: 20px;
-  display: flex;
-  gap: 10px;
-  transition: all .5s;
-  opacity: 0;
-  & a {
-    color: dimgray;
-    &.active {
-      color: deeppink;
-      background-color: transparent;
-    }
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  .group-btn-mobile {
-    top: 20px;
-    opacity: 1;
+@media only screen and (max-width: 800px) {
+  .text{
+    display: none;
   }
 }
