--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,10 +28,15 @@
   font-family: Iciel;
 }
 .header {
-  & h2 {
-    margin-bottom: 0;
-  }
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
   background-color: #3f51b5;
+  // &-logo {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
 }
 
 @media only screen and (max-width: 767px) {
